--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "header" }}
-<header class="pf-c-page__header pf-c-page__header--max-width pf-x-u-blur pf-c-page__header--overlay pf-u-box-shadow-sm-bottom">
+<header class="pf-c-page__header pf-c-page__header--max-width pf-x-u-blur pf-c-page__header--overlay pf-u-box-shadow-sm-bottom pf-u-pr-md">
   <div class="pf-c-page__header-tools pf-c-page__header-tools--max-width">
     <div class="pf-c-page__header-tools-group">
       <div class="pf-c-page__header-tools-item">
