--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,15 +1,15 @@
 <section
   class="pf-c-page__main-section pf-m-limit-width pf-m-no-fill pf-m-light pf-m-shadow-top"
 >
-  <div class="pf-c-page__main-body">
-    <div class="pf-l-flex pf-m-justify-content-space-between">
+  <div class="pf-c-page__main-body pf-x-u-blur pf-x-c-footer--fixed">
+    <div class="pf-l-flex pf-m-justify-content-space-between pf-x-c-footer--max-width">
       <div class="pf-l-flex__item">
-        <a href="{{ .Site.Params.Meta.Source }}" target="_blank" rel="noopener"
+        <a href="{{ .Site.Params.Meta.Source }}" target="_blank" rel="noopener" class="pf-x-c-footer__link"
           >© {{ now.Year }} {{ .Site.Params.Meta.Author }}</a
         >
       </div>
       <div class="pf-l-flex__item">
-        <a href="/imprint">Imprint</a>
+        <a href="/imprint" class="pf-x-c-footer__link">Imprint</a>
       </div>
     </div>
   </div>
