refactor: Make Twitter feed responsive

--- a/layouts/articles/single.html
+++ b/layouts/articles/single.html
@@ -109,8 +109,17 @@
                         </div>
                       </a>
                     </div>
-                  {{ end }}
+                  {{ end }} 
                 </div>
+
+                <a
+                  href="/articles"
+                  class="pf-c-button pf-m-link pf-u-mt-lg"
+                >
+                  <span class="pf-c-button__icon pf-m-start">
+                    <i class="fas fa-arrow-right" aria-hidden="true"></i> </span
+                  >All articles</a
+                >
               </div>
             </div>
           {{ end }}
