feat: Add hover effects to interactive elements

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -181,7 +181,7 @@ $fa-font-path: $pf-global--font-path + "/webfonts";
 
   &:hover {
     .pf-c-avatar--navbar {
-      transform: rotate(-25deg) scale(1.1);
+      transform: rotate(-5deg) scale(1.1);
     }
   }
 }
@@ -194,4 +194,13 @@ $fa-font-path: $pf-global--font-path + "/webfonts";
 
 .pf-x-c-footer__link {
   color: var(--pf-global--Color--light-100);
+}
+
+.pf-m-hoverable-raised {
+  transition: transform 0.7s ease-in-out;
+
+  &:hover {
+    transform: rotate(-2deg) scale(1.05);
+    z-index: 1000;
+  }
 }
