--- a/layouts/index.html
+++ b/layouts/index.html
@@ -107,7 +107,7 @@
                                   />
                                 </div>
                               </div>
-                              <div class="pf-c-card__title">{{ .Title }}</div>
+                              <div class="pf-c-card__title pf-u-pt-md pf-u-pb-sm">{{ .Title }}</div>
                               <div class="pf-c-card__body pf-u-pb-sm">
                                 {{ .Params.Excerpt }}
                               </div>
