--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,12 +4,12 @@
   <div class="pf-c-page__main-body pf-x-u-blur pf-x-c-footer--fixed">
     <div class="pf-l-flex pf-m-justify-content-space-between pf-x-c-footer--max-width">
       <div class="pf-l-flex__item">
-        <a href="{{ .Site.Params.Meta.Source }}" target="_blank" rel="noopener" class="pf-x-c-footer__link"
+        <a href="{{ .Site.Params.Meta.Source }}" target="_blank" rel="noopener" class="pf-x-m-no-highlight--dark"
           >© {{ now.Year }} {{ .Site.Params.Meta.Author }}</a
         >
       </div>
       <div class="pf-l-flex__item">
-        <a href="/imprint" class="pf-x-c-footer__link">Imprint</a>
+        <a href="/imprint" class="pf-x-m-no-highlight--dark">Imprint</a>
       </div>
     </div>
   </div>
