feat: Add wrapper to project list

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -144,75 +144,85 @@
     <section id="projects">
       <h2>Projects</h2>
 
-      <ul>
-        {{ range .Site.Data.projects_gen }}
-          <li>
-            <h3>{{ .title }}</h3>
-            <div class="pf-l-gallery pf-m-gutter pf-l-gallery--max-500">
-              {{ range sort .projects "stars" "desc" }}
-                <div class="pf-l-gallery__item">
-                  <a href="{{ .url }}" target="_blank" rel="noopener" class="pf-x-m-no-decoration pf-u-color-100">
-                    <div class="pf-c-card pf-m-hoverable-raised pf-u-h-100">
-                      <div class="pf-c-card__header">
-                        <div class="pf-c-card__header-main pf-u-w-100 pf-u-display-flex pf-u-align-items-center pf-u-justify-content-space-between">
-                          <div class="pf-c-card__title pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center">
-                            <span class="pf-u-mr-sm">{{ .title }}</span>
-                          </div><div class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center">
-                            <i class="fas fa-calendar-alt" aria-hidden="true"></i>
-                            <span class="pf-u-ml-sm">{{ .date | time.Format ":date_long" }}</span>
+      <div class="pf-c-card">
+        <div class="pf-x-c-projects--max-width">
+        <div
+          class="pf-c-card__title pf-l-flex pf-m-justify-content-space-between pf-m-align-items-center pf-u-pt-xl pf-u-pb-0 pf-u-px-0"
+        >
+          <span>Projects</span>
+        </div>
+        <div class="pf-c-card__body pf-u-px-0">
+          <ul>
+          {{ range .Site.Data.projects_gen }}
+            <li>
+              <h3 class="pf-u-font-size-xl pf-u-my-md">{{ .title }}</h3>
+              <div class="pf-l-gallery pf-m-gutter pf-l-gallery--max-500">
+                {{ range sort .projects "stars" "desc" }}
+                  <div class="pf-l-gallery__item">
+                    <a href="{{ .url }}" target="_blank" rel="noopener" class="pf-x-m-no-decoration pf-u-color-100">
+                      <div class="pf-c-card pf-m-hoverable-raised pf-u-h-100">
+                        <div class="pf-c-card__header">
+                          <div class="pf-c-card__header-main pf-u-w-100 pf-u-display-flex pf-u-align-items-center pf-u-justify-content-space-between">
+                            <div class="pf-c-card__title pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center">
+                              <span class="pf-u-mr-sm">{{ .title }}</span>
+                            </div><div class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center">
+                              <i class="fas fa-calendar-alt" aria-hidden="true"></i>
+                              <span class="pf-u-ml-sm">{{ .date | time.Format ":date_long" }}</span>
+                            </div>
                           </div>
-                        </div>
 
-                      </div>
-                  
-                      <div class="pf-c-card__body">
-                        <p class="pf-u-mb-md">{{ .description }}</p>
+                        </div>
                       
-                        <div class="pf-c-chip-group">
-                          <div class="pf-c-chip-group__main">
-                            <ul class="pf-c-chip-group__list" role="list" aria-label="Topic list">
-                              {{ range first 3 .topics }}
-                              <li class="pf-c-chip-group__list-item">
-                                <div class="pf-c-chip">
-                                  <span class="pf-c-chip__text">{{ . }}</span>
-                                </div>
-                              </li>
-                              {{ end }}
-                            </ul>
+                        <div class="pf-c-card__body">
+                          <p class="pf-u-mb-md">{{ .description }}</p>
+                        
+                          <div class="pf-c-chip-group">
+                            <div class="pf-c-chip-group__main">
+                              <ul class="pf-c-chip-group__list" role="list" aria-label="Topic list">
+                                {{ range first 3 .topics }}
+                                <li class="pf-c-chip-group__list-item">
+                                  <div class="pf-c-chip">
+                                    <span class="pf-c-chip__text">{{ . }}</span>
+                                  </div>
+                                </li>
+                                {{ end }}
+                              </ul>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="pf-c-card__footer pf-u-display-flex pf-u-align-items-center pf-u-justify-content-space-between pf-u-flex-direction-column pf-u-flex-direction-row-on-sm pf-u-color-200">
+                          <div class="pf-u-display-flex pf-u-align-items-center pf-u-mb-md pf-u-mb-0-on-sm"><div class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center pf-u-mr-md">
+                            <i class="fas fa-language" aria-hidden="true"></i>
+                            <span class="pf-u-ml-sm">{{ .language }}</span>
+                          </div>
+                          <div class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center">
+                            <i class="fas fa-balance-scale" aria-hidden="true"></i>
+                            <span class="pf-u-ml-sm">{{ .license }}</span>
+                          </div></div><div class="pf-u-display-flex pf-u-align-items-center">
+                          <div class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center pf-u-mr-md">
+                            <i class="fas fa-star" aria-hidden="true"></i>
+                            <span class="pf-u-ml-sm">{{ .stars }} Stars</span>
+                          </div>
+                          <div class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center pf-u-mr-md">
+                            <i class="fas fa-code-branch" aria-hidden="true"></i>
+                            <span class="pf-u-ml-sm">{{ .forks }} Forks</span>
+                          </div>
+                          <div class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center">
+                            <i class="fas fa-dot-circle" aria-hidden="true"></i>
+                            <span class="pf-u-ml-sm">{{ .issues }} Issues</span>
+                          </div>
                           </div>
                         </div>
                       </div>
-                      <div class="pf-c-card__footer pf-u-display-flex pf-u-align-items-center pf-u-justify-content-space-between pf-u-flex-direction-column pf-u-flex-direction-row-on-sm pf-u-color-200">
-                        <div class="pf-u-display-flex pf-u-align-items-center pf-u-mb-md pf-u-mb-0-on-sm"><div class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center pf-u-mr-md">
-                          <i class="fas fa-language" aria-hidden="true"></i>
-                          <span class="pf-u-ml-sm">{{ .language }}</span>
-                        </div>
-                        <div class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center">
-                          <i class="fas fa-balance-scale" aria-hidden="true"></i>
-                          <span class="pf-u-ml-sm">{{ .license }}</span>
-                        </div></div><div class="pf-u-display-flex pf-u-align-items-center">
-                        <div class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center pf-u-mr-md">
-                          <i class="fas fa-star" aria-hidden="true"></i>
-                          <span class="pf-u-ml-sm">{{ .stars }} Stars</span>
-                        </div>
-                        <div class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center pf-u-mr-md">
-                          <i class="fas fa-code-branch" aria-hidden="true"></i>
-                          <span class="pf-u-ml-sm">{{ .forks }} Forks</span>
-                        </div>
-                        <div class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center">
-                          <i class="fas fa-dot-circle" aria-hidden="true"></i>
-                          <span class="pf-u-ml-sm">{{ .issues }} Issues</span>
-                        </div>
-                        </div>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-              {{ end }}
-            </div>
-          </li>
-        {{ end }}
-      </ul>
+                    </a>
+                  </div>
+                {{ end }}
+              </div>
+            </li>
+          {{ end }}
+        </ul>
+        </div></div>
+      </div>
     </section>
 
     {{ partial "footer" . }}
