--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -102,7 +102,8 @@ $fa-font-path: $pf-global--font-path + "/webfonts";
 
 .pf-l-grid--max-width,
 .pf-c-page__main-section--max-width,
-.pf-x-c-footer--max-width {
+.pf-x-c-footer--max-width,
+.pf-x-c-projects--max-width {
   width: 1128px;
   max-width: 100%;
   margin: 0 auto;
