--- a/layouts/index.html
+++ b/layouts/index.html
@@ -144,7 +144,7 @@
     <section id="projects">
       <h2>Projects</h2>
 
-      <div class="pf-c-card">
+      <div class="pf-c-card pf-u-px-md pf-u-px-0-on-xl">
         <div class="pf-x-c-projects--max-width">
         <div
           class="pf-c-card__title pf-l-flex pf-m-justify-content-space-between pf-m-align-items-center pf-u-pt-xl pf-u-pb-0 pf-u-px-0"
@@ -159,13 +159,13 @@
               <div class="pf-l-gallery pf-m-gutter pf-l-gallery--max-500">
                 {{ range sort .projects "stars" "desc" }}
                   <div class="pf-l-gallery__item">
-                    <a href="{{ .url }}" target="_blank" rel="noopener" class="pf-x-m-no-decoration pf-u-color-100">
-                      <div class="pf-c-card pf-m-hoverable-raised pf-u-h-100">
+                    <a href="{{ .url }}" target="_blank" rel="noopener" class="pf-x-m-no-decoration pf-x-u-color-light-100">
+                      <div class="pf-c-card pf-m-hoverable-raised pf-u-h-100" style="background: {{ safeCSS .background }}">
                         <div class="pf-c-card__header">
                           <div class="pf-c-card__header-main pf-u-w-100 pf-u-display-flex pf-u-align-items-center pf-u-justify-content-space-between">
                             <div class="pf-c-card__title pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center">
                               <span class="pf-u-mr-sm">{{ .title }}</span>
-                            </div><div class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center">
+                            </div><div class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center pf-u-font-size-sm">
                               <i class="fas fa-calendar-alt" aria-hidden="true"></i>
                               <span class="pf-u-ml-sm">{{ .date | time.Format ":date_long" }}</span>
                             </div>
@@ -181,7 +181,7 @@
                               <ul class="pf-c-chip-group__list" role="list" aria-label="Topic list">
                                 {{ range first 3 .topics }}
                                 <li class="pf-c-chip-group__list-item">
-                                  <div class="pf-c-chip">
+                                  <div class="pf-c-chip pf-c-chip--transparent">
                                     <span class="pf-c-chip__text">{{ . }}</span>
                                   </div>
                                 </li>
@@ -190,8 +190,8 @@
                             </div>
                           </div>
                         </div>
-                        <div class="pf-c-card__footer pf-u-display-flex pf-u-align-items-center pf-u-justify-content-space-between pf-u-flex-direction-column pf-u-flex-direction-row-on-sm pf-u-color-200">
-                          <div class="pf-u-display-flex pf-u-align-items-center pf-u-mb-md pf-u-mb-0-on-sm"><div class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center pf-u-mr-md">
+                        <div class="pf-c-card__footer pf-u-display-flex pf-u-align-items-center pf-u-justify-content-space-between pf-u-flex-direction-column pf-u-flex-direction-row-on-sm pf-x-u-color-light-200 pf-u-font-size-sm">
+                          <div class="pf-u-display-flex pf-u-align-items-center pf-u-mb-md pf-u-mb-0-on-sm"><div class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center pf-u-mr-sm">
                             <i class="fas fa-language" aria-hidden="true"></i>
                             <span class="pf-u-ml-sm">{{ .language }}</span>
                           </div>
@@ -199,17 +199,17 @@
                             <i class="fas fa-balance-scale" aria-hidden="true"></i>
                             <span class="pf-u-ml-sm">{{ .license }}</span>
                           </div></div><div class="pf-u-display-flex pf-u-align-items-center">
-                          <div class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center pf-u-mr-md">
+                          <div class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center pf-u-mr-sm">
                             <i class="fas fa-star" aria-hidden="true"></i>
-                            <span class="pf-u-ml-sm">{{ .stars }} Stars</span>
+                            <span class="pf-u-ml-sm">{{ .stars }}</span>
                           </div>
-                          <div class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center pf-u-mr-md">
+                          <div class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center pf-u-mr-sm">
                             <i class="fas fa-code-branch" aria-hidden="true"></i>
-                            <span class="pf-u-ml-sm">{{ .forks }} Forks</span>
+                            <span class="pf-u-ml-sm">{{ .forks }}</span>
                           </div>
                           <div class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center">
                             <i class="fas fa-dot-circle" aria-hidden="true"></i>
-                            <span class="pf-u-ml-sm">{{ .issues }} Issues</span>
+                            <span class="pf-u-ml-sm">{{ .issues }}</span>
                           </div>
                           </div>
                         </div>
