--- a/layouts/index.html
+++ b/layouts/index.html
@@ -142,16 +142,14 @@
     </div>
 
     <section id="projects">
-      <h2>Projects</h2>
-
-      <div class="pf-c-card pf-u-px-md pf-u-px-0-on-xl">
+      <div class="pf-c-card pf-u-px-md pf-u-px-0-on-xl pf-u-mt-xl pf-x-u-transparent pf-x-u-color-light-100 pf-x-u-no-shadow">
         <div class="pf-x-c-projects--max-width">
         <div
-          class="pf-c-card__title pf-l-flex pf-m-justify-content-space-between pf-m-align-items-center pf-u-pt-xl pf-u-pb-0 pf-u-px-0"
+          class="pf-c-card__title pf-l-flex pf-m-justify-content-space-between pf-m-align-items-center pf-u-pt-0 pf-u-pb-0 pf-u-px-0"
         >
           <span>Projects</span>
         </div>
-        <div class="pf-c-card__body pf-u-px-0">
+        <div class="pf-c-card__body pf-u-px-0 pf-u-pb-0">
           <ul>
           {{ range .Site.Data.projects_gen }}
             <li>
