--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,16 +1,12 @@
-<section
-  class="pf-c-page__main-section pf-m-limit-width pf-m-no-fill pf-m-light pf-m-shadow-top"
->
-  <div class="pf-c-page__main-body pf-x-u-blur pf-x-c-footer--fixed">
-    <div class="pf-l-flex pf-m-justify-content-space-between pf-x-c-footer--max-width">
-      <div class="pf-l-flex__item">
-        <a href="{{ .Site.Params.Meta.Source }}" target="_blank" rel="noopener" class="pf-x-m-no-highlight--dark"
-          >© {{ now.Year }} {{ .Site.Params.Meta.Author }}</a
-        >
-      </div>
-      <div class="pf-l-flex__item">
-        <a href="/imprint" class="pf-x-m-no-highlight--dark">Imprint</a>
-      </div>
+<div class="pf-c-page__main-body pf-u-px-md pf-u-px-0-on-lg pf-u-py-lg">
+  <div class="pf-l-flex pf-m-justify-content-space-between pf-x-c-footer--max-width">
+    <div class="pf-l-flex__item">
+      <a href="{{ .Site.Params.Meta.Source }}" target="_blank" rel="noopener" class="pf-x-m-no-highlight--dark"
+        >© {{ now.Year }} {{ .Site.Params.Meta.Author }}</a
+      >
+    </div>
+    <div class="pf-l-flex__item">
+      <a href="/imprint" class="pf-x-m-no-highlight--dark">Imprint</a>
     </div>
   </div>
-</section>
+</div>
