feat: Add socials instead of just contact section

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -68,7 +68,7 @@
           Follow on Twitter
         </a>
 
-        {{ partial "contactmenu" (dict "ID" "contact" "Matrix" .Site.Data.person.matrix "Signal" .Site.Data.person.signal "Mail" .Site.Data.person.mail ) }}
+        {{ partial "contactmenu" (dict "ID" "contact" "Instagram" .Site.Data.person.instagram "Mastodon" .Site.Data.person.mastodon "Matrix" .Site.Data.person.matrix "Signal" .Site.Data.person.signal "Phone" .Site.Data.person.phone "Mail" .Site.Data.person.mail ) }}
       </div>
     </div> 
 
