--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -167,7 +167,11 @@ $fa-font-path: $pf-global--font-path + "/webfonts";
 }
 
 .lastcommit {
-  width: calc(100% - 100px);
+  width: calc(100%);
+
+  @media screen and (min-width: 768) {
+    width: calc(100% - 100px);
+  }
 }
 
 .pf-x-u-live {
