--- a/layouts/partials/lastcommit.html
+++ b/layouts/partials/lastcommit.html
@@ -1,10 +1,10 @@
 <div class="pf-c-card pf-c-card--overlay" id="{{ .ID }}">
   <div class="pf-c-card__body pf-u-p-0 pf-u-display-flex">
-    <img src="/img/octocat.svg" class="pf-u-p-md pf-u-pr-sm pf-x-octocat">
+    <img src="/img/octocat.svg" class="pf-u-p-md pf-u-pr-sm pf-x-octocat pf-u-display-none pf-u-display-flex-on-md">
     <div class="lastcommit">
       <div class="pf-c-code-block pf-x-u-transparent pf-u-p-md pf-u-pl-sm">
         <div class="pf-c-code-block__header">
-          <div class="pf-c-code-block__actions pf-c-code-block__actions--info">
+          <div class="pf-c-code-block__actions pf-c-code-block__actions--info pf-u-flex-direction-column pf-u-flex-direction-row-on-lg">
 <div class="pf-c-code-block__actions-item pf-u-py-sm pf-u-px-md">
               <span>
           <i class="fas fa-info-circle" aria-hidden="true"></i>
